<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_rc_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/rc_image_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_intense_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:includeFontPadding="false"
        android:text="@string/intense"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_rc_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_rc_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:ellipsize="end"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/rc_item_name"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/tv_intense_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_intense_2" />

    <TextView
        android:id="@+id/tv_rc_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:includeFontPadding="false"
        android:text="@string/price_x"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/tv_rc_item_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_rc_item_name" />

    <TextView
        android:id="@+id/tv_rc_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:includeFontPadding="false"
        android:text="@string/percent"
        android:textColor="@color/brand_pink"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/tv_rc_price"
        app:layout_constraintTop_toBottomOf="@id/tv_rc_item_name" />

    <TextView
        android:id="@+id/tv_rc_item_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:includeFontPadding="false"
        android:text="@string/z_discount"
        android:textColor="@color/brand_pink"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/tv_rc_percent"
        app:layout_constraintTop_toTopOf="@+id/tv_rc_percent" />

    <TextView
        android:id="@+id/tv_rc_price_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:includeFontPadding="false"
        android:text="@string/price"
        android:textColor="@color/gray_02"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/tv_rc_item_discount"
        app:layout_constraintTop_toTopOf="@+id/tv_rc_item_discount" />

    <ImageView
        android:id="@+id/iv_free_shipping_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_free_shipping"
        app:layout_constraintStart_toStartOf="@+id/tv_rc_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_rc_price" />

    <ImageView
        android:id="@+id/iv_this_today_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:src="@drawable/ic_today_go"
        app:layout_constraintStart_toEndOf="@id/iv_free_shipping_2"
        app:layout_constraintTop_toTopOf="@+id/iv_free_shipping_2" />

    <ImageButton
        android:id="@+id/iv_pink_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/selector_pink_heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/iv_basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/selector_basket"
        app:layout_constraintStart_toStartOf="@+id/iv_pink_heart"
        app:layout_constraintTop_toBottomOf="@+id/iv_pink_heart" />/

</androidx.constraintlayout.widget.ConstraintLayout>