<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.view.store.RankingFragment">

    <TextView
        android:id="@+id/tv_shopping_mall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:includeFontPadding="false"
        android:text="@string/shopping_mall"
        android:textColor="@color/main_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:includeFontPadding="false"
        android:text="@string/brand"
        android:textColor="@color/mouse_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_shopping_mall"
        app:layout_constraintStart_toEndOf="@+id/tv_shopping_mall" />

    <ImageView
        android:id="@+id/iv_z_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        android:src="@drawable/ic_z_only"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_check"
        app:layout_constraintBottom_toBottomOf="@+id/iv_z_only"
        app:layout_constraintEnd_toStartOf="@+id/iv_z_only"
        app:layout_constraintTop_toTopOf="@+id/iv_z_only" />

    <ImageView
        android:id="@+id/iv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:src="@drawable/ic_info"
        app:layout_constraintEnd_toEndOf="@+id/iv_z_only"
        app:layout_constraintTop_toBottomOf="@+id/iv_z_only" />

    <ImageButton
        android:id="@+id/ib_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_filtering"
        app:layout_constraintStart_toStartOf="@+id/tv_shopping_mall"
        app:layout_constraintTop_toBottomOf="@+id/tv_shopping_mall" />

    <TextView
        android:id="@+id/chip_cloth"
        style="@style/ChipButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/cloth"
        app:layout_constraintBottom_toBottomOf="@+id/ib_filter"
        app:layout_constraintStart_toEndOf="@+id/ib_filter"
        app:layout_constraintTop_toTopOf="@+id/ib_filter" />

    <TextView
        android:id="@+id/chip_style"
        style="@style/ChipButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/style"
        app:layout_constraintBottom_toBottomOf="@+id/chip_cloth"
        app:layout_constraintStart_toEndOf="@+id/chip_cloth"
        app:layout_constraintTop_toTopOf="@+id/chip_cloth" />

    <TextView
        android:id="@+id/chip_age"
        style="@style/ChipButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/age"
        app:layout_constraintBottom_toBottomOf="@+id/chip_style"
        app:layout_constraintStart_toEndOf="@+id/chip_style"
        app:layout_constraintTop_toTopOf="@+id/chip_style" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="14dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_style"
        tools:itemCount="5"
        tools:listitem="@layout/item_store" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_more"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rectangle_border_gray_5"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:text="@string/more_ranking"
        android:textColor="@color/dark_gray"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_ranking" />
</androidx.constraintlayout.widget.ConstraintLayout>