<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_store"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/roboto_medium"
            android:includeFontPadding="false"
            android:textColor="@color/pale_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/one" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_circle_store"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_num"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img_moderntage_1" />

        <TextView
            android:id="@+id/tv_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:textColor="@color/dark_gray"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/iv_circle_store"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sixsixgirls" />

        <ImageView
            android:id="@+id/iv_z_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toEndOf="@+id/tv_store"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_z_only_small" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="@color/cold_gray"
            android:textSize="10sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/noto_sans_kr_medium"
            app:layout_constraintStart_toStartOf="@+id/tv_store"
            app:layout_constraintTop_toBottomOf="@+id/tv_store"
            tools:text="@string/simple_lovely"/>

        <TextView
            android:id="@+id/tv_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="11dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/max_1000"
            android:textColor="@color/purple_blue"
            android:textSize="9sp"
            app:layout_constraintBottom_toTopOf="@+id/line"
            app:layout_constraintStart_toStartOf="@+id/tv_type"
            app:layout_constraintTop_toBottomOf="@+id/tv_type" />

        <ImageButton
            android:id="@+id/ib_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="9dp"
            android:background="@drawable/selector_star"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:includeFontPadding="false"
            android:textSize="8sp"
            android:textColor="@color/ice_gray"
            app:layout_constraintEnd_toEndOf="@+id/ib_star"
            app:layout_constraintStart_toStartOf="@+id/ib_star"
            app:layout_constraintTop_toBottomOf="@+id/ib_star"
            tools:text="@string/follower_num" />

        <TextView
            android:id="@+id/tv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="11dp"
            android:textSize="14sp"
            android:textColor="@color/cold_gray"
            android:includeFontPadding="false"
            android:fontFamily="@font/noto_sans_kr_bold"
            app:layout_constraintEnd_toStartOf="@+id/ib_star"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/minus"/>

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:background="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>